--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,11 @@
         "symfony/mailer": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/verify-email-bundle": "^1.11",
         "twig/cssinliner-extra": "^3.4",
         "twig/extra-bundle": "^3.4"
     },
